--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -2,6 +2,7 @@
   width: 560px;
   margin: auto;
   padding: 0 0.2%;
+  padding-bottom: 2.5%;
 }
 
 .post-header-section {
@@ -35,11 +36,17 @@
     width: 35px;
 }
 
-.likes, .time-stamp {
+.likes {
     line-height: 2.5;
     font-weight: bold;
     font-size: 14px;
     padding-bottom: 0.5%;
+}
+
+.time-stamp {
+    line-height: 2.5;
+    color: grey;
+    font-size: 12px;
 }
 
 .add-comment-divider {
