[STRETCH][DayThree] Added log out button functionality and styles

--- a/instagram/src/components/LoginPage/LoginPage.css
+++ b/instagram/src/components/LoginPage/LoginPage.css
@@ -50,4 +50,9 @@
   font-size: 15px;
   border: 1px solid #3898f0;
   margin-top: 10px;
+  cursor: pointer;
+}
+
+.log-in-button:hover {
+    background-color: dodgerblue;
 }
